--- a/client/public/custom_ads.html
+++ b/client/public/custom_ads.html
@@ -9,20 +9,29 @@
     height: 100vh;
   }
   .custom-ads {
-    width: 100vw;
+    width: 100vh;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
   }
+  #content {
+    width: 100vw;
+    height: 100vh;
+    position: relative;
+    overflow: hidden;
+  }
   .custom-ads-item {
-    width: calc(100vw- 20px);
-    height: calc(100vh - 20px);
+    width: 100%;
+    /*calc(100vw- 20px);*/
+    height: 100%;
+    /*calc(100vh - 20px);*/
     margin: 10px;
+    position: absolute;
   }
   .custom-ads-item img {
-    width: 100%;
+    /* width: 100%;*/
     height: 100%;
     border-radius: 5px;
     box-shadow: 0 5px 5px rgba(0,0,0,0.211);
@@ -32,20 +41,7 @@
     width: 100%;
     height: 100%;
     overflow-x: auto;
-    /*   justify-content: center;
-    align-items: center;
-    vertical-align: middle;
-    /* justify-content: center;
-    align-items: center;
-    text-align: center;*/
-
   }
-  /*  #content_edit img {
-    width: 100%;
-    height: 100%;
-    margin-left: 5px;
-    margin-right: 5px;
-  }*/
   #content_edit button {
     width: 100%;
     height: 100%;
@@ -65,7 +61,7 @@
     flex: 1;
   }
   .item {
-    width: 100%;
+    /*  width: 100%;*/
     height: 100%;
     margin-left: 5px;
     margin-right: 5px;
@@ -80,9 +76,8 @@
     top: 20px;
   }
   .item img {
-    width: 100vh;
+    /*width: 100vw;*/
     height: 100vh;
-
   }
   .item div * {
     width: 100%;
@@ -126,7 +121,9 @@
     </svg>
   </div>
 </div>
-<div id="content"></div>
+<div id="content">
+  <div style="width:1px;height"></div>
+</div>
 <div id="id_error" style="display:none;color:red;">
   <h1>Not found</h1>
   <h3>Error custom ads</h3>
@@ -136,19 +133,12 @@
 <script src="./js/client.js"></script>
 <script src="./js/design.js"></script>
 <script>
- /* if (window.eruda) {
+  if (window.eruda) {
     eruda.init({
       theme: 'dark'
     });
-  }*/
+  }
   // parent.openGetFiles();
-  parent.console.log("jj")
-  /* var linksImages = [
-    "https://cdn.glitch.global/c3ddef40-7488-4cf8-a47e-8a5f00e49899/1.jpg?v=1722656348962",
-    "https://cdn.glitch.global/c3ddef40-7488-4cf8-a47e-8a5f00e49899/2.jpg?v=1722656333427",
-    "https://cdn.glitch.global/c3ddef40-7488-4cf8-a47e-8a5f00e49899/3.jpg?v=1722656322513",
-    "https://cdn.glitch.global/c3ddef40-7488-4cf8-a47e-8a5f00e49899/4.jpg?v=1722656315310"
-  ];/**/
   var btn_edit = document.getElementById("btn_edit")
   var content_edit = document.getElementById("content_edit")
   var content = document.getElementById("content");
@@ -194,7 +184,7 @@
   })
   var isEdit = true;
   btn_edit.onclick = function() {
-    content.innerText = "";
+    //    content.innerText = "";
     console.log(isEdit)
     if (isEdit) {
       content.style.display = "none"
@@ -226,5 +216,55 @@
       item.appendChild(clear)
       cont.appendChild(item)
     }
+  }
+  function addCustomAds(id, linksImages) {
+    var content = document.getElementById(id);
+    content.className = "custom-ads"
+    var listImages = [];
+    for (var i = 0; i < linksImages.length; i++) {
+      var img = document.createElement("img");
+      img.src = linksImages[i];
+      listImages.push(img);
+    }
+    var COUNT_ITEM = 0;
+    var item1 = document.createElement("div");
+    item1.className = "custom-ads-item";
+    item1.appendChild(listImages[listImages.length-1]);
+    content.appendChild(item1);
+    var count_move = content.clientWidth;
+    var count_stop = 0;
+    var isMove = true;
+    var speed = 100;
+    var listItem = [];
+    for (let i of listImages) {
+      var item = document.createElement("div");
+      item.className = "custom-ads-item"
+      item.style.transition = `all 0.3s ease`;
+      item.style.transform = `translateX(100vw) scale(0)`;
+      item.appendChild(i);
+      listItem.push(item)
+      content.appendChild(item)
+    }
+    var a = 0;
+    window.setInterval(function() {
+      var item = listItem[COUNT_ITEM];
+      a+=1;
+      switch (a) {
+        case 1:
+          item.style.transform = `translateX(0) scale(1)`;
+          item.style.zIndex = 1;
+          break;
+        case 5:
+          item.style.zIndex = 0;
+          item.style.transform = `translateX(-100%) scale(0)`;
+          break;
+        case 6:
+          item.style.transform = `translateX(100%) scale(0)`;
+          a = 0;
+          COUNT_ITEM = COUNT_ITEM >= listItem.length-1? 0: COUNT_ITEM+1;
+          break;
+      }
+    },
+      500);
   }
 </script>
