--- a/client/public/custom_ads.html
+++ b/client/public/custom_ads.html
@@ -41,6 +41,7 @@
     width: 100%;
     height: 100%;
     overflow-x: auto;
+    overflow-y: hidden;
   }
   #content_edit button {
     width: 100%;
@@ -94,6 +95,29 @@
     width: 100%;
     height: 100%;
   }
+  /* Personaliza la barra de desplazamiento */
+  ::-webkit-scrollbar {
+    background: rgba(130,130,130,0.291);
+    height: 12px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: rgba(130,130,130,0.291);
+    /* Color del fondo de la barra */
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: rgba(167,224,156,0.526);
+    border-radius: 10px;
+    /* Color del "pulgar" o la parte que arrastras */
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgba(135,234,116,0.851);
+    /*background: #555;*/
+    /* Color cuando pasas el mouse sobre el "pulgar" */
+  }
+
 </style>
 <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
   <symbol id="icon_close" viewBox="0 0 100 100">
